2009-08-05  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* cimXmlGen.c
	[ 2727830 ] No valid variable in error message in cimXmlGen.c 

2009-07-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2825221 ] No validation for PersistenceType property
	(take 2)

	* test/xml/indCIMXMLHandler-verify_PersistenceType.*
	Test for above fix

2009-07-28  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* cimXmlGen.c:
	[ 2826620 ] Memory leak while generating responses.

2009-07-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* support.c:
	[ 2827800 ] SfcbBroker Library crashes in Local mode communication
	(patch by Rajib Saha)

2009-07-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2823219 ] doHttpRequest Segfault when Protocol field is NULL

2009-07-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpios.h
	[ 2825365 ] class provider crashing on 64 bit machines
	(patch from Surendra Kodali)

2009-07-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am
	[2802113] make footprint doesn't account for .so files
	(patch from Pratayusha Doddapaneni)

2009-07-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/ABT/MonitorABT
	[2821718] Former reports included in the report zip file if ABT fails
	(patch from Pratayusha Doddapaneni)

2009-06-25  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* fileRepository.c:
	[ 2727799 ] Qualifier provider exiting due to a SIGSEGV signal
	(patch from Shigeyoshi Hashi, tested by Pratayusha Doddapaneni)
	
2009-06-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.pre.in:
	[ 2807245 ] Bump downloaded CIM schema to 2.21

	* interopServerProvider.c, default.reg.in, interop.mof:
	[ 2807405 ] Implement CIM_IndicationService
	
2009-06-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2804477 ] SFCB doesn't properly parse content-length from some clients
	(patch from J. Bart Whitely)
	